@@ -29,6 +29,8 @@
 <ul>
 		
 		<li>
+<b>Bug Fix:</b> Fixed bug in default header config that prevented child themes from configuring their own default headers. (<em>2012-06-13 - Alex Chapin</em>)</li>		
+		<li>
 <b>New feature:</b> Added display of a given site's privacy setting to the right header meta-area. (<em>2012-06-13 - Alex Chapin</em>)</li>
 		<li>
 <b>Change:</b> Update right header meta-area options to allow for custom text/links with same options as header left meta-area. (<em>2012-06-13 - Alex Chapin</em>)</li>
