@@ -8,6 +8,11 @@ This release refactors theme css to reduce and simplify it. This release also ad
 minor revisions to UI
 		
 		
+	* Bug Fix: 
+		Fixed bug in default header config that prevented child themes from
+		configuring their own default headers.
+		(2012-06-13 - Alex Chapin)		
+		
 	* New feature: 
 		Added display of a given site's privacy setting to the right header
 		meta-area. 
